<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".fragment.FragmentScan">


    <RelativeLayout
        android:id="@+id/scanScreenHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:weightSum="2"
        android:background="@color/colorDasboardLayout">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/organizationinfotext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/reader"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:gravity="center"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/devicestatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/active_text_back"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:layout_alignParentEnd="true"
            android:text="@string/rd_disconnected"
            android:textAlignment="center"
            android:textColor="@color/colorMissedRed"
            android:textSize="12dp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonsLayout"
        android:layout_below="@+id/scanScreenHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@color/colorScanHeader">

        <EditText
            android:id="@+id/placedCard"
            android:layout_width="10dp"
            android:layout_height="5dp"
            android:layout_below="@+id/swipeCounts"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:focusedByDefault="true"
            android:inputType="textPassword"
            android:textIsSelectable="false"
            android:textSize="5dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/swipeCounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="0000"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_below="@+id/swipeCounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/intiatescan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="45dp"
                    android:background="@drawable/scan_button_back"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="CONNECT"
                    android:layout_below="@+id/swipeCounts"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/submitswipes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="45dp"
                    android:background="@drawable/scan_button_back"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/upload_to_server_btn"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textStyle="bold"/>
            </LinearLayout>


        </LinearLayout>



    </RelativeLayout>


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/listviewText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonsLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Checkpoint List"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"

        />


    <ListView
        android:id="@+id/checkpointlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listviewText"
        android:layout_marginTop="20dp"
        android:dividerHeight="0.5dp"
        android:background="@drawable/checkpoint_bg" />


    <ProgressBar
        android:id="@+id/progressBarScan"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white" />


</RelativeLayout>
